# HollyWars-SolanaZK-edition

./: .gitignore  Anchor.toml  README.md  deployed-devnet.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
app/: README.md  next.config.ts  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx  snarkjs.d.ts
app/app/components/: Battlefront.tsx  EnlistWizard.tsx  Header.tsx  MedalsHall.tsx  PixelMedal.tsx  VotingBooth.tsx  WalletProvider.tsx  WarRoom.tsx
app/app/enlist/: page.tsx
app/app/hooks/: useLiveWars.ts  useSingleWar.ts
app/app/lib/: census-tree.ts  config.ts  decode.ts  identity.ts  mock.ts  poseidon.ts  prove.ts  serialize.ts  solana.ts
app/app/medals/: page.tsx
app/public/zk/: vote.wasm
circuits/: .gitignore  README.md  medal.circom  medal_verification_key.json  package.json  poseidon_vectors.json  verification_key.json  vote.circom
circuits/scripts/: setup-medal.sh  setup.sh
circuits/spike/: gen_vkey.js  multiplier.circom  serialize.ts
circuits/test/: input_valid.json  test-vote.js
programs/holy-wars/: Cargo.toml
programs/holy-wars/src/: errors.rs  lib.rs  medal_verifying_key.rs  (+2 more)
programs/verifier-spike/: Cargo.toml
programs/verifier-spike/src/: lib.rs  verifying_key.rs
scripts/: DEPLOY-devnet.md  README.md  claim-e2e-devnet.ts  create-wars.ts  deploy-vercel.sh  e2e-devnet.ts  verify-browser-crypto.ts  verify-root.ts
services/attestor/: package.json
services/common/: package.json
services/relayer/: package.json
tests/: holy-wars-core.ts  holy-wars-vote.ts  verifier-spike.ts
(+67 files in other folders)
