[package]
name = "verifier-spike"
version = "0.1.0"
description = "SPIKE: Groth16 verifier with alt_bn128 syscalls"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifier_spike"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
groth16-solana = "0.2"
